--- a/pona.html
+++ b/pona.html
@@ -28,7 +28,7 @@
       globalVal=wordIndex
       //Changes word text to be the randomly chosen toki pona word
       let word = tokiWords[wordIndex];
-      document.getElementById("words").innerHTML= tokiWords.length;
+      document.getElementById("words").innerHTML= word;
    }
 
    function getDef(){
@@ -75,6 +75,10 @@
    <button onclick="getToki();">Get Toki Pona Word</button>
    <button onclick="getDef();">Get Toki Pona Definition</button>
 
+   <br>
+   <br>
+   <br>
+   <br>
    <br>
    <br>
 <a href="./"><button>Home</button></a>
