--- a/pona.html
+++ b/pona.html
@@ -4,6 +4,11 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
+      <style>.myDiv {
+  border: 5px outset red;
+  background-color: lightblue;    
+  text-align: center;
+}   </style>
    </head>
 <body style="background-color:powderblue;">
  <h2>Learn Toki Pona</h2>
@@ -70,8 +75,10 @@
 </script>
 
    <!--Gives text spots for the functions to change-->
+   <div class="outputs">
    <p id="words">‎</p>
    <p id="definition">‎</p>
+   </div>
    <br>
    <br>
    
