--- a/pona.html
+++ b/pona.html
@@ -4,11 +4,13 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
-      <style>.myDiv {
-  border: 5px outset red;
-  background-color: lightblue;    
-  text-align: center;
-}   </style>
+      <style>
+         .outputs {
+           border: 5px outset red;
+           background-color: lightblue;    
+           text-align: center;
+         }   
+      </style>
    </head>
 <body style="background-color:powderblue;">
  <h2>Learn Toki Pona</h2>
@@ -82,7 +84,7 @@
    <br>
    <br>
    
-   <button onclick="getToki();">Get Toki Pona Word</button>
+   <button onclick="getToki();">Get Toki Pona </button>
    <button onclick="getDef();">Get Toki Pona Definition</button>
 
    <br>
