--- a/pona.html
+++ b/pona.html
@@ -87,7 +87,7 @@
    <br>
    <br>
    <div class="buttons">
-      <button onclick="getToki();">Get Toki Pona </button>
+      <button onclick="getToki();">Get Toki Pona Word</button>
       <button onclick="getDef();">Get Toki Pona Definition</button>
    </div>
    <br>
