--- a/pona.html
+++ b/pona.html
@@ -6,12 +6,11 @@
       <title>Toki Pona</title>
       <style>
          .outputs {
-           border: 5px outset red;
-           background-color: lightblue;    
+           background-color: blue;    
            text-align: center;
          }   
          .buttons {
-            position: relative;
+            position: center;
          }
       </style>
    </head>
