--- a/pona.html
+++ b/pona.html
@@ -5,12 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Toki Pona</title>
       <style>
-         .outputs {
-           background-color: blue;    
+         .outputs { 
            text-align: center;
          }   
-         .buttons {
-            position: center;
+         .buttons { 
+            margin: auto;
+           width: 50%;
+           border: 3px solid green;
+           padding: 10px;
          }
       </style>
    </head>
