--- a/pona.html
+++ b/pona.html
@@ -6,11 +6,14 @@
       <title>Toki Pona</title>
       <style>
          .outputs { 
-           text-align: center;
+            margin: auto;
+           width: 20%;
+           border: 3px solid green;
+           padding: 10px;
          }   
          .buttons { 
             margin: auto;
-           width: 10%;
+           width: 20%;
            border: 3px solid green;
            padding: 10px;
          }
