--- a/pona.html
+++ b/pona.html
@@ -10,6 +10,7 @@
            width: 20%;
            border: 3px solid green;
            padding: 10px;
+            text-align: center;
          }   
          .buttons { 
             margin: auto;
