--- a/pona.html
+++ b/pona.html
@@ -86,6 +86,7 @@
 
    <!--Gives text spots for the functions to change-->
    <div class="outputs">
+      <h><b>Define That toki pona Word!!</b></h>
       <p id="words">‎</p>
       <p id="definition">‎</p>
    </div>
