--- a/pona.html
+++ b/pona.html
@@ -88,7 +88,7 @@
 
    <!--Gives text spots for the functions to change-->
    <div class="outputs">
-      <h2><b>Define That toki pona Word!!</b></h2>
+      <b>Define That toki pona Word!!</b>
       <p id="words">‎</p>
       <p id="definition">‎</p>
    </div>
