--- a/pona.html
+++ b/pona.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Toki Pona</title>
+      <title>toki pona</title>
       <style>
          .outputs { 
          <!--Sets up div for outputs text-->
