--- a/pona.html
+++ b/pona.html
@@ -55,7 +55,7 @@
                      "Thing, Phenomenon, Object", "Bad, Negative, Complicated", "Tool, Implement, Machine", "Center, Inside, Internal Organs, Stomach", "Gross, Obscene, Unclean", "Human Being, Person, Somebody",
                      "Yellow", "Have, Carry, Hold", "Fish, Marine Animal", "Produce Sound, Utterance, Recite", "Arriving, Coming, Future, Become", "Plant, Vegetation, Herb, Leaf", "Able to, Can, May, Possible", 
                      "To Use, With, By Means Of", "Fruit, Vegetable, Mushroom", "Also, Indeed", "Split, Cut, Sever, Sharp", "Hard Object, Metal, Rock, Stone", "Clay, Dough, Powder", "Air, Breath, Essence, Spirit",
-                     "Colorful, Pigmented, Part of the LGBTQ+", "Community, Group, Nation", "Ear, Hear, Listen", "Between Context Phrases", "Take, Seize, Catch", "Sleeping, Get", "Blue, Green", "Head, Mind, Control, Lead, Own",
+                     "Colorful, Pigmented, Part of the LGBTQ+", "Community, Group, Nation", "Ear, Hear, Listen", "Between Context Phrases", "Take, Seize, Catch", "Sleeping, Resting", "Blue, Green", "Head, Mind, Control, Lead, Own",
                      "Stairs, Square, Block, Corner, Cube", "Cloth, Clothing, Cover, Layer of Privacy", "Cold, Cool, Raw", "Between Subject and Verb Unless Subject is mi or sina", "Little, Small, Young", "Long Flexible Thing Like Hair or Rope",
                      "Flat Object, Book, Card, Phone", "Red", "Located At, Real, True", "Arm, Hand, Touch, Interact", "Eye, Look, See, Read", "Door, Hole, Orifice, Window", "Earth, Land, Country, Soil", 
                      "Parent, Ancestor, Creator, Sustainer", "Money, Cash, Wealth, Large Domesticated Animal", "Woman, Female, Wife", "Midpoint, Middle, Mediocre, Neither", "I, Me, We, Us", "Man, Masculine, Husband", 
