--- a/pona.html
+++ b/pona.html
@@ -14,12 +14,12 @@
          text-align: center;
       }   
       <!--Sets up div for buttons-->
-      .buttons { 
-         margin: auto;
-         width: 23%;
+      .buttons {
          border: 3px solid green;
-         padding: 10px;
-         }
+         background-color: lightblue;
+         text-align: center;
+      }
+ 
       </style>
    </head>
 <body style="background-color:powderblue;">
