--- a/pona.html
+++ b/pona.html
@@ -15,6 +15,7 @@
       }   
       <!--Sets up div for buttons-->
       .buttons {
+         width: 23%
          border: 3px solid green;
          background-color: lightblue;
          text-align: center;
