--- a/pona.html
+++ b/pona.html
@@ -13,9 +13,9 @@
          text-align: center;
       }   
       .buttons {
+         margin:auto;
          width: 23%
          border: 3px solid green;
-         background-color: lightblue;
          text-align: center;
       }
  
