--- a/pona.html
+++ b/pona.html
@@ -13,9 +13,10 @@
          text-align: center;
       }   
       .buttons {
-         margin:auto;
-         width: 23%
+         margin: auto;
+         width: 23%;
          border: 3px solid green;
+         padding: 10px;
          text-align: center;
       }
  
