--- a/pi.html
+++ b/pi.html
@@ -54,5 +54,7 @@
   <a href="./" class="boxed btn"><button>Go Home</button></a>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
+   <br>
+   <a href="./pona"><button>Toki Pona</button></a>
 </body>
 </html>
