--- a/ami.html
+++ b/ami.html
@@ -19,6 +19,9 @@
           <img src="pics/Free_Hand_Bee-143926.png", width=70%, height=auto>
      <h3>Beatrice (Free Hand)</h3>
   <a href="./"><button>Home</button></a>
+     <br>
     <a href="./pi"><button>Wonders of Pi</button></a>
+   <br>
+   <a href="./pona"><button>Toki Pona</button></a>
 </body>
 </html>
