--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
    <br>
-   
   <a href="./pona"><button>Toki Pona</button></a>
+   <br>
+   <a href="./blog"><button>Toki Blog</button></a>
    <br>
 </body>
 </html>
