--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,10 @@
    </head>
 <body style="background-color:powderblue;">
 3/25/2024 <br>
-<p>
+<p>mi kama sona e toki pona! mi pana e pona tawa mi kepeken sitelen lon ni. mi kama e pali ala ni tenpo esun. mi lukin ala e jan pi
+kama sona mi e pali. ona li ike. ona lili li olin ala mute e jan pimeja! tenpo lili la, jan pi nasin sewi Kolisu li jo e kon pimeja. 
+mi jo e pali ala la, mi wile lukin e jan Nesun e jan olin mi. mi olin mute e ona. mi wile awen e ni. ni li ken pana e pona tawa me kepeken
+kama sona e toki pona. seme li sona? pali ala pini la, mi lukin. olin mute! <3</p>
     <a href="./" class="boxed btn"><button>Go Home</button></a>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
