--- a/pi.html
+++ b/pi.html
@@ -56,5 +56,7 @@
   <a href="./ami"><button>Amigurumi</button></a>
    <br>
    <a href="./pona"><button>Toki Pona</button></a>
+      <br>
+   <a href="./blog"><button>Toki Blog</button></a>
 </body>
 </html>
