--- a/ami.html
+++ b/ami.html
@@ -23,5 +23,7 @@
     <a href="./pi"><button>Wonders of Pi</button></a>
    <br>
    <a href="./pona"><button>Toki Pona</button></a>
+   <br>
+   <a href="./blog"><button>Toki Blog</button></a>
 </body>
 </html>
