--- a/pona.html
+++ b/pona.html
@@ -111,4 +111,6 @@
 <a href="./pi"><button>Wonders of Pi</button></a>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
+  <br>
+  <a href="./blog"><button>Toki Blog</button></a>
 </body>
