--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Wonders of Pi!</title>
+      <title>ale mi lon toki pona</title>
    </head>
 <body style="background-color:powderblue;">
    <hr>
