--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
-  <a href="./pi"><button>Wonders of Pi</button></a>
+  <a href="./533_Project_1.pdf"><button>Wonders of Pi</button></a>
   <br>
   <br>
   <a href="./ami"><button>Amigurumi</button></a>
@@ -19,3 +19,4 @@
    <br>
 </body>
 </html>
+
