--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="./533_Project_1.pdf"><button>Wonders of Pi</button></a>
   <br>
   <br>
-  <a href="./ami"><button>Amigurumi</button></a>
+  <a href="./Backlund_Transformations.pdf"><button>Lie Backlund Transformations</button></a>
    <br>
   <a href="./pona"><button>Toki Pona</button></a>
    <br>
@@ -19,4 +19,5 @@
    <br>
 </body>
 </html>
+
 
