--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
-  <a href="./533_Project_1.pdf"><button>Wonders of Pi</button></a>
+  <a href="533_Project_1.pdf"><button>Chapter 10 Summary Paper</button></a>
   <br>
   <br>
   <a href="./Backlund_Transformations.pdf"><button>Lie Backlund Transformations</button></a>
@@ -19,5 +19,6 @@
    <br>
 </body>
 </html>
+
 
 
