--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="533_Project_1.pdf"><button>Chapter 10 Summary Paper</button></a>
   <br>
   <br>
-  <a href="./Backlund_Transformations.pdf"><button>Lie Backlund Transformations</button></a>
+  <a href="Backlund_Transformations.pdf"><button>Lie Backlund Transformations</button></a>
    <br>
   <a href="./pona"><button>Toki Pona</button></a>
    <br>
@@ -19,6 +19,7 @@
    <br>
 </body>
 </html>
+
 
 
 
