--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 <body style="background-color:powderblue;">
 <h1>Cody's Website</h1>
 <p>This is my site</p>
+   <br>
+   <a href="./blog"><button>Toki Blog</button></a>
+   <br>
   <a href="533_Project_1.pdf"><button>Chapter 10 Summary Paper</button></a>
   <br>
   <br>
   <a href="Backlund_Transformations.pdf"><button>Lie Backlund Transformations</button></a>
    <br>
-  <a href="./pona"><button>Toki Pona</button></a>
-   <br>
-   <a href="./blog"><button>Toki Blog</button></a>
-   <br>
+  <a href="592_Paper_Rubik_s_Cubes_and_Group_Theory (1).pdf"><button>Rubik's Cubes and Group Theory</button></a>
 </body>
 </html>
+
 
 
 
